[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Personagens/Megaman/Projetil_Megaman.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Megaman/SpritesMegaman/Megaman_NORMAL/Megaman_BULLETS_CHARGED.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=7]
radius = 1.30435
height = 0.0

[sub_resource type="Animation" id=3]
resource_name = "Bullet_1"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 7, 20, 1, 1 ), Rect2( 12, 19, 2, 2 ), Rect2( 18, 18, 3, 3 ), Rect2( 25, 17, 4, 4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Shape:shape:radius")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.869565, 1.30435, 2.17391 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("VisibilityNotifier2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 8.29282e-08 ), Vector2( -2.98023e-08, -5.96046e-08 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("VisibilityNotifier2D:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.0869565, 0.0869565 ), Vector2( 0.173913, 0.173913 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Shape:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Shape:shape:height")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Bullet_2"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 39, 9, 14, 20 ), Rect2( 61, 11, 23, 16 ), Rect2( 90, 3, 32, 32 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Shape:shape:radius")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 8.26087, 16.087 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("VisibilityNotifier2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.869565, -0.434783 ), Vector2( 0.869566, -1.78814e-07 ), Vector2( 0.217391, 0.217391 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("VisibilityNotifier2D:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.565217, 0.869565 ), Vector2( 0.913043, 0.652174 ), Vector2( 1.41304, 1.02174 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Shape:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Shape:shape:height")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 6.08696, 0.869564 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Bullet_3"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 39, 9, 14, 20 ), Rect2( 61, 11, 23, 16 ), Rect2( 90, 3, 32, 32 ), Rect2( 130, 8, 27, 22 ), Rect2( 162, 3, 40, 32 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VisibilityNotifier2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.217391, 0.217391 ), Vector2( 0.434782, -3.57628e-07 ), Vector2( 1.73913, -0.434784 ), Vector2( 0.652174, 1.19209e-07 ), Vector2( 1.30435, -0.652174 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("VisibilityNotifier2D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.717391, 1.02174 ), Vector2( 0.73913, 0.73913 ), Vector2( 1.26087, 1.34783 ), Vector2( 1.32609, 1.13043 ), Vector2( 1.47826, 1.32609 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Shape:shape:radius")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 7.82609, 9.13043, 14.7826, 12.6087 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Shape:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Shape:shape:height")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.869566, 6.95652, 2.6087, 16.5217 ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 12, 19, 2, 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Shape:shape:radius")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.30435 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VisibilityNotifier2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -2.98023e-08, -5.96046e-08 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("VisibilityNotifier2D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.173913, 0.173913 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Shape:shape:height")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Shape:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}

[node name="Projetil_Megaman" type="Area2D"]
scale = Vector2( 2.3, 2.3 )
script = ExtResource( 2 )

[node name="Shape" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 12, 19, 2, 2 )

[node name="Anim" type="AnimationPlayer" parent="."]
autoplay = "Bullet_1"
anims/Bullet_1 = SubResource( 3 )
anims/Bullet_2 = SubResource( 5 )
anims/Bullet_3 = SubResource( 6 )
anims/RESET = SubResource( 4 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -2.98023e-08, -5.96046e-08 )
scale = Vector2( 0.173913, 0.173913 )

[node name="Delay_Recarga_Bullet" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="Delay_Recarga_Bullet" to="." method="_on_Delay_Recarga_Bullet_timeout"]
